samples/_failures_safe/1761609449_4862fe_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9cffe9eb.c: In function ‘main’:
./samples/SAFE/__tmp_9cffe9eb.c:162:9: error: ‘de’ undeclared (first use in this function)
  162 |     if (de
      |         ^~
./samples/SAFE/__tmp_9cffe9eb.c:162:9: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_9cffe9eb.c:162:11: error: expected ‘)’ at end of input
  162 |     if (de
      |        ~  ^
      |           )
./samples/SAFE/__tmp_9cffe9eb.c:162:5: error: expected declaration or statement at end of input
  162 |     if (de
      |     ^~
